// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag snapshot > Tag demo snapshot 0 1`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-tag bui-tag-outlined bui-tag-neutral"
    >
      默认标签
    </div>
    <div
      class="bui-tag bui-tag-contained bui-tag-neutral"
    >
      填充标签
    </div>
    <div
      class="bui-tag bui-tag-subtle bui-tag-neutral"
    >
      浅亮标签
    </div>
  </div>
</div>
`;

exports[`Tag snapshot > Tag demo snapshot 0 2`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 10px; --flex-wrap: nowrap; border-radius: var(--bui-shape-radius-card); padding: 24px;"
  >
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 10px; --flex-wrap: nowrap;"
    >
      <div
        class="bui-tag bui-tag-outlined bui-tag-primary"
      >
        限时特价
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-info"
      >
        音乐剧
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-success"
      >
        音乐剧
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-warning"
      >
        点映
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-danger"
      >
        限时优惠
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-purple"
      >
        优惠
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-light"
      >
        优惠
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-dark"
      >
        优惠
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-vip"
      >
        会员
      </div>
    </div>
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 10px; --flex-wrap: nowrap;"
    >
      <div
        class="bui-tag bui-tag-contained bui-tag-primary"
      >
        早鸟优惠
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-info"
      >
        音乐剧
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-success"
      >
        影城卡
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-warning"
      >
        点映
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-danger"
      >
        限时优惠
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-purple"
      >
        优惠
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-light"
      >
        优惠
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-dark"
      >
        优惠
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-vip"
      >
        会员
      </div>
    </div>
    <div
      class="bui-stack"
      style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 10px; --flex-wrap: nowrap;"
    >
      <div
        class="bui-tag bui-tag-subtle bui-tag-primary"
      >
        早鸟优惠
      </div>
      <div
        class="bui-tag bui-tag-subtle bui-tag-info"
      >
        音乐剧
      </div>
      <div
        class="bui-tag bui-tag-subtle bui-tag-success"
      >
        影城卡
      </div>
      <div
        class="bui-tag bui-tag-subtle bui-tag-warning"
      >
        点映
      </div>
      <div
        class="bui-tag bui-tag-subtle bui-tag-danger"
      >
        限时优惠
      </div>
      <div
        class="bui-tag bui-tag-subtle bui-tag-purple"
      >
        优惠
      </div>
      <div
        class="bui-tag bui-tag-subtle bui-tag-light"
      >
        优惠
      </div>
      <div
        class="bui-tag bui-tag-subtle bui-tag-dark"
      >
        优惠
      </div>
      <div
        class="bui-tag bui-tag-subtle bui-tag-vip"
      >
        会员
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag snapshot > Tag demo snapshot 0 3`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: column; --spacing: 10px; --flex-wrap: nowrap;"
  >
    <div
      class="bui-tag bui-tag-contained bui-tag-neutral"
      style="background-color: rgb(105, 238, 255);"
    >
      自定义色彩
    </div>
    <div
      class="bui-tag bui-tag-subtle bui-tag-neutral"
      style="color: rgb(105, 238, 255); background-color: rgba(105, 238, 255, 0.3);"
    >
      自定义色彩
    </div>
    <div
      class="bui-tag bui-tag-outlined bui-tag-neutral"
      style="color: rgb(105, 238, 255); border-color: rgba(105,238,255,0.4);"
    >
      自定义色彩
    </div>
  </div>
</div>
`;

exports[`Tag snapshot > Tag demo snapshot 0 4`] = `
<div>
  <div
    class="bui-stack"
    style="--align-items: center; --justify-content: center; --flex-direction: row; --spacing: 10px; --flex-wrap: wrap;"
  >
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-contained bui-tag-primary"
      >
        primary
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-info"
      >
        info
      </div>
    </div>
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-contained bui-tag-success"
      >
        success
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-warning"
      >
        warning
      </div>
    </div>
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-outlined bui-tag-warning"
      >
        warning
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-success"
      >
        success
      </div>
    </div>
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-outlined bui-tag-primary"
      >
        primary
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-info"
      >
        info
      </div>
    </div>
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-contained bui-tag-primary"
      >
        primary
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-info"
      >
        info
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-info"
      >
        info
      </div>
    </div>
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-outlined bui-tag-primary"
      >
        primary
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-info"
      >
        info
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-info"
      >
        info
      </div>
    </div>
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-outlined bui-tag-primary"
      >
        primary
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-info"
      >
        info
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-info"
      >
        info
      </div>
    </div>
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-outlined bui-tag-primary"
      >
        primary
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-info"
      >
        info
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-info"
      >
        info
      </div>
    </div>
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-contained bui-tag-primary"
      >
        primary
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-info"
      >
        info
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-info"
      >
        info
      </div>
    </div>
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-contained bui-tag-primary"
      >
        primary
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-info"
      >
        info
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-info"
      >
        info
      </div>
    </div>
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-contained bui-tag-primary"
      >
        primary
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-info"
      >
        info
      </div>
      <div
        class="bui-tag bui-tag-outlined bui-tag-info"
      >
        info
      </div>
    </div>
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-outlined bui-tag-primary"
      >
        primary
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-info"
      >
        info
      </div>
      <div
        class="bui-tag bui-tag-contained bui-tag-info"
      >
        info
      </div>
    </div>
    <div
      class="bui-tag-group"
    >
      <div
        class="bui-tag bui-tag-outlined bui-tag-warning"
      >
        warning
      </div>
    </div>
  </div>
</div>
`;
